--- a/Contact.html
+++ b/Contact.html
@@ -1,18 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - Contact</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+</head>
+<body>
 
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
+  <h1>Exceptional</h1>
+  <h2>Realty Group</h2>
 
-    <!-- links -->
-    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+  <!-- links -->
+  <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
- 	<h3>Contact</h3>
+  <h3>Contact</h3>
+  
+  <!-- Map -->
 
-  </body>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6049.819660523173!2d-73.99449906781105!3d40.697983484844116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1448993595543" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  
+</body>
 </html>
