--- a/Contact.html
+++ b/Contact.html
@@ -18,5 +18,21 @@
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6049.819660523173!2d-73.99449906781105!3d40.697983484844116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1448993595543" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   
+  <!-- Contact Form -->
+ 	<!-- associate the label by creating label for = id-->
+
+  <form action="#" method="post">
+  	<label for="fullname">Name</label>
+  	<input type="text" id="fullname" name="fullname" placeholder="Your Name" required>
+  	<label for="email">Email</label>
+  	<input type="email" id="email" name="email" placeholder="Your Email" required>
+  	<label for="phone">Phone</label>
+  	<input type="tel" id ="phone" name="phone" placeholder="Your Phone (Optional)">
+  	<br>
+  	<label for="message">Message</label>
+  	<textarea id="message" name="message" rows="3"></textarea>
+  	<input type="submit" value="send">
+  </form>
+
 </body>
 </html>
